# hackage-index

./: .gitignore  bisect-test.sh  hackage-index.cabal
.github/workflows/: haskell.yaml
src/: Bisect.hs  CacheDb.hs  HIX.hs  IndexTar.hs  Main.hs  PkgIdxTs.hs  Types.hs  Utils.hs
src/Cabal/: Config.hs  PD.hs
