cabal-version:       2.2
name:                hackage-index
version:             0.1.0.0
synopsis:            Utility for accessing hackage index
description:
            This package provides the tool @hit@ (short for /Hackage index tool/) for performing queries on the package index. @hit@ is designed as a companion tool to  <//hackage.haskell.org/package/cabal-install cabal> and consequently directly reuses @cabal@'s package index cache. See @hit --help@ for more information.
            .
            Currently only the @hit@ executable is exposed but it is planned for a future release to expose an library providing an API.
bug-reports:         https://github.com/hvr/hackage-index/issues
license:             GPL-3.0-or-later
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
category:            Development

source-repository head
  type: git
  location: https://github.com/hvr/hackage-index

-- Hackage index (query) tool
executable hit
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Bisect
    Cabal.PD
    CacheDb
    HIX
    IndexTar
    PkgIdxTs
    Types
    Utils

  other-modules:
    Paths_hackage_index
  autogen-modules:
    Paths_hackage_index

  default-language: Haskell2010
  other-extensions:
    BangPatterns
    GeneralizedNewtypeDeriving
    LambdaCase
    OverloadedStrings
    RecordWildCards

  ghc-options: -Wall

  build-depends:
    , Cabal                ^>= 3.2.0.0
                        || ^>= 3.4.0.0
    , cabal-install-parsers ^>= 0.2
                        ||  ^>= 0.4.1
    , aeson                ^>= 1.3.1.1
                        || ^>= 1.4.0.0
    , base                 ^>= 4.8.2.0
                        || ^>= 4.9.1.0
                        || ^>= 4.10.1.0
                        || ^>= 4.11.1.0
                        || ^>= 4.12.0.0
                        || ^>= 4.13.0.0
                        || ^>= 4.14.0.0
    , base16-bytestring    ^>= 1.0.1.0
    , bytestring           ^>= 0.10.6.0
    , containers           ^>= 0.5.6.2
                        || ^>= 0.6.0.1
    , deepseq              ^>= 1.4.1.1
    , directory            ^>= 1.2.3.0
                        || ^>= 1.3.0.0
    , filepath             ^>= 1.4.0.0
    , cryptohash-sha256    ^>= 0.11.101.0
    , mtl                  ^>= 2.2.2
    , optparse-applicative ^>= 0.14.3.0
                        || ^>= 0.16.1.0
    , parsec               ^>= 3.1.13.0
    , paths                ^>= 0.2.0.0
    , process              ^>= 1.4.3.0
                        || ^>= 1.6.1.0
    , semigroups           ^>= 0.18.5
    , sqlite-simple        ^>= 0.4.16.0
    , tar                  ^>= 0.5.1.0
    , time                 ^>= 1.5.0.1
                        || ^>= 1.6.0.1
                        || ^>= 1.8.0.2
                        || ^>= 1.9.3
    , text                 ^>= 1.2.3.1
    , unordered-containers ^>= 0.2.7
    , vector               ^>= 0.12.0.2
    , vector-th-unbox      ^>= 0.2.1.6
    , zlib                 ^>= 0.6.2
